--- a/D3/quartile/quartile.html
+++ b/D3/quartile/quartile.html
@@ -7,7 +7,18 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Linear Scale</h1>
     <div class="chart" id="heatmap1"></div>
+
+    <h1>Quantize Scale</h1>
+    <div class="chart" id="heatmap2"></div>
+
+    <h1>Quantile Scale</h1>
+    <div class="chart" id="heatmap3"></div>
+
+    <h1>Threshold Scale</h1>
+    <div class="chart" id="heatmap4"></div>
+
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="quartile.js"></script>
 </body>
