--- a/D3/histogram/index.html
+++ b/D3/histogram/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+  <select id="metric">
+    <option value="humidity" selected>Humidity</option>
+    <option value="temperature">Temperature</option>
+    <option value="dewPoint">Dew Point</option>
+    <option value="windSpeed">Wind Speed</option>
+    <option value="cloudCover">Cloud Cover</option>
+    <option value="ozone">Ozone</option>
+  </select>
   <div id="chart"></div>
 
   <script src="https://d3js.org/d3.v6.min.js"></script>
