--- a/D3/scatter/scatterplot.html
+++ b/D3/scatter/scatterplot.html
@@ -7,7 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="chart"></div>
+    <div id="chart">
+        <div id="tooltip" class="tooltip">
+            <div class="metric-date"></div>
+            <div class="metric-humidity">
+                Humidity:<span></span>
+            </div>
+            <div class="metric-temp">
+                Temperature: <span></span>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="scatterplot.js"></script>
 </body>
